# nuwa

./: .gitignore  AGENTS.md  README.md  TODO.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  notify.yml
docs/: development_guide.md  index.md
docs/zh/: index.md
src/dag/: qdrant.py
src/nuwa/: __init__.py  alarm.py  base.py  chat.py  llm.py  multi_agent.py  qdrant.py  re_act.py  react_agent.py  scheduling_tools.py  search.py  tool.py  web_search_tools.py
src/nuwa/agents/: base.py  react_agent.py
src/nuwa/compressors/: __init__.py  base.py  zstd_compressor.py
src/nuwa/contexts/: __init__.py  base.py  simple.py
src/nuwa/embeddings/: __init__.py  base.py  local_qwen3_encoder.py  openai_encoder.py
src/nuwa/hashers/: __init__.py  base.py  crc64hasher.py
src/nuwa/llms/: __init__.py  base.py  openai_compatible.py
src/nuwa/prompts/: __init__.py  base.py  simple.py
src/nuwa/storages/: __init__.py  base.py  local_conversation_storage.py  local_kv_storage.py  vector_store.py
src/nuwa/tools/: __init__.py  mcp_adapter.py  models.py  tool_kit.py
tests/: conftest.py  test_alarm.py  test_local_conversation_storage.py  test_re_act.py  test_react_agent.py  test_search.py  test_tool.py
