[project]
name = "nuwa"
version = "0.4.9"
description = "A deity capable of creating AI beings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastcrc>=0.3.5",
    "fastmcp>=2.13.3",
    "httpx>=0.28.1",
    "json-repair>=0.54.2",
    "lxml>=6.0.2",
    "msgpack>=1.1.2",
    "openai>=2.9.0",
    "oxymouse>=1.1.0",
    "playwright>=1.57.0",
    "playwright-stealth>=2.0.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "socksio>=1.0.0",
    "torch>=2.11.0",
    "transformers>=5.6.0",
    "urllib3>=1.26.20",
    "zstandard>=0.25.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.13",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
]
